:recycle: Code refactoring to run in any machine
Removed routes pointing to Yunxiang's laptop and also added the carbon intentity to the environment.

--- a/CityLearn/citylearn/data/my_data/banma.ipynb
+++ b/CityLearn/citylearn/data/my_data/banma.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "def draw_graph(b1, b2, index):\n",
-    "    file_path = \"/home/yunxiang.li/FRL/CityLearn/citylearn/data/my_data/building_simple_\"+str(b1)+\".csv\"\n",
-    "    file_path_test = \"/home/yunxiang.li/FRL/CityLearn/citylearn/data/my_data/building_simple_\"+str(b2)+\".csv\"\n",
+    "    file_path = \"./CityLearn/citylearn/data/my_data/building_simple_\"+str(b1)+\".csv\"\n",
+    "    file_path_test = \"./CityLearn/citylearn/data/my_data/building_simple_\"+str(b2)+\".csv\"\n",
     "\n",
     "    demand = []\n",
     "    with open(file_path, \"r\") as f:\n",
