--- a/CityLearn/examples/example.ipynb
+++ b/CityLearn/examples/example.ipynb
@@ -34,10 +34,10 @@
     "import math\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from citylearn.agents.rbc import OptimizedRBC as RBCAgent\n",
-    "from citylearn.agents.sac import SACOptimizedRBC as SACAgent\n",
-    "from citylearn.citylearn import CityLearnEnv\n",
-    "from citylearn.cost_function import CostFunction\n",
+    "from CityLearn.citylearn.agents.rbc import OptimizedRBC as RBCAgent\n",
+    "from CityLearn.citylearn.agents.sac import SACOptimizedRBC as SACAgent\n",
+    "from CityLearn.citylearn.citylearn import CityLearnEnv\n",
+    "from CityLearn.citylearn.cost_function import CostFunction\n",
     "import pandas as pd"
    ]
   },
