--- a/takac.ipynb
+++ b/takac.ipynb
@@ -43,9 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append('./CityLearn/')\n",
-    "# from citylearn.my_citylearn import CityLearnEnv\n",
-    "from citylearn.gen_citylearn import CityLearnEnv\n",
+    "\n",
+    "# from Citylearn.citylearn.my_citylearn import CityLearnEnv\n",
+    "from CityLearn.citylearn.gen_citylearn import CityLearnEnv\n",
     "\n",
     "wandb_record = False\n",
     "if wandb_record:\n",
