--- a/takac.ipynb
+++ b/takac.ipynb
@@ -2,7 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "api = wandb.Api()\n",
+    "\n",
+    "# run = api.run(\"madog/TRPO_rl_gen/wzablp17\")\n",
+    "# run.config[\"seed\"] = 0\n",
+    "# run.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# runs = api.runs(path=\"madog/TRPO_rl_gen\", filters={\"tags\": \"fl\"})\n",
+    "runs = api.runs(path=\"madog/TRPO_rl_gen\", filters={\"config.train_type\": \"fl-personalized\"})\n",
+    "\n",
+    "for run in runs:\n",
+    "\n",
+    "    run.config[\"train_type\"] = \"fl-personalization\"\n",
+    "    run.update()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.17"
   },
   "orig_nbformat": 4
  },
