--- a/src/notebooks/citylearn_ccai_tutorial.ipynb
+++ b/src/notebooks/citylearn_ccai_tutorial.ipynb
@@ -4540,7 +4540,8 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "rl_energy",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -4554,11 +4555,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.9.17"
-    },
-    "vscode": {
-      "interpreter": {
-        "hash": "aef885a76ce31739e452d1e6967b400907b14827afd25732d0e38ec88d4e0d05"
-      }
     }
   },
   "nbformat": 4,
