--- a/src/notebooks/ML_817_topic_I_lab_2.ipynb
+++ b/src/notebooks/ML_817_topic_I_lab_2.ipynb
@@ -154,25 +154,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code to generate data for several houses with different surface areas and heat transfer coefficients\n",
-    "# Missing parameters can be assumed or generated based on your own assumptions"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id  surface   u_coeff  indoor_temp_setpoint\n",
+      "0   1      134  0.978435             22.917935\n",
+      "1   2      128  0.767344             24.461619\n",
+      "2   3      147  0.664883             23.622006\n",
+      "3   4       89  0.166455             22.046485\n",
+      "4   5       77  0.791436             24.796401\n",
+      "5   6       80  0.479025             20.145732\n",
+      "6   7       88  0.194753             23.615042\n",
+      "7   8      139  0.465941             22.897988\n",
+      "8   9       87  0.962173             21.641262\n",
+      "9  10       65  0.710645             21.052253\n",
+      "      hour  outdoor_temp\n",
+      "0        0     13.068259\n",
+      "1        1     11.842206\n",
+      "2        2     16.042983\n",
+      "3        3     18.637346\n",
+      "4        4     16.871134\n",
+      "...    ...           ...\n",
+      "8755  8755     -1.991355\n",
+      "8756  8756      2.650272\n",
+      "8757  8757      4.256576\n",
+      "8758  8758      6.422211\n",
+      "8759  8759     10.566408\n",
+      "\n",
+      "[8760 rows x 2 columns]\n",
+      "          house_1      house_2      house_3     house_4      house_5  \\\n",
+      "0    -1291.394249 -1119.055541 -1031.499765 -133.008101  -714.719310   \n",
+      "1    -1452.142474 -1239.478445 -1151.331473 -151.171487  -789.435652   \n",
+      "2     -901.377258  -826.878264  -740.756883  -88.939002  -533.438036   \n",
+      "3     -561.229463  -572.059990  -487.189597  -50.504761  -375.336141   \n",
+      "4     -792.798104  -745.537291  -659.815240  -76.670343  -482.970062   \n",
+      "...           ...          ...          ...         ...          ...   \n",
+      "8755 -3265.865255 -2598.210489 -2503.393049 -356.109043 -1632.460401   \n",
+      "8756 -2657.300024 -2142.310013 -2049.730739 -287.345574 -1349.597134   \n",
+      "8757 -2446.696893 -1984.538811 -1892.734089 -263.548943 -1251.708055   \n",
+      "8758 -2162.759888 -1771.830281 -1681.069816 -231.466115 -1119.733134   \n",
+      "8759 -1619.412834 -1364.787341 -1276.025185 -170.071828  -867.183506   \n",
+      "\n",
+      "         house_6     house_7      house_8      house_9     house_10  \n",
+      "0    -271.223175 -180.753424  -636.630673  -717.637595  -368.796223  \n",
+      "1    -318.208029 -201.765831  -716.037034  -820.269291  -425.430005  \n",
+      "2    -157.225704 -129.771861  -443.970195  -468.626415  -231.387943  \n",
+      "3     -57.804423  -85.309013  -275.944087  -251.454841  -111.549257  \n",
+      "4    -125.489268 -115.578800  -390.334296  -399.302709  -193.134033  \n",
+      "...          ...         ...          ...          ...          ...  \n",
+      "8755 -848.338295 -438.848892 -1611.979279 -1978.263072 -1064.429161  \n",
+      "8756 -670.461692 -359.299521 -1311.360405 -1589.717061  -850.023369  \n",
+      "8757 -608.904824 -331.770267 -1207.326733 -1455.254882  -775.825027  \n",
+      "8758 -525.913309 -294.655083 -1067.067615 -1273.971784  -675.790166  \n",
+      "8759 -367.099228 -223.630787  -798.665197  -927.065125  -484.361623  \n",
+      "\n",
+      "[8760 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code to generate data for several houses with different surface areas and heat transfer coefficients\n",
+    "# Missing parameters can be assumed or generated based on your own assumptions\n",
+    "\n",
+    "def generate_house_data(\n",
+    "    num_houses=10, min_surface_area=50, max_surface_area=200, min_heat_transfer=0.1,\n",
+    "    max_heat_transfer=1.0, num_hours=8760, inside_temp_range=(20, 25)\n",
+    "):\n",
+    "    # Generate random surface areas between min_surface_area and max_surface_area\n",
+    "    surface_areas = np.random.uniform(min_surface_area, max_surface_area, num_houses).astype(int)\n",
+    "\n",
+    "    # Generate random heat transfer coefficients between min_heat_transfer and max_heat_transfer\n",
+    "    heat_transfer_coefficients = np.random.uniform(min_heat_transfer, max_heat_transfer, num_houses)\n",
+    "\n",
+    "    # Inside temperature per home\n",
+    "\n",
+    "    inside_temperatures = np.random.uniform(inside_temp_range[0], inside_temp_range[1], num_houses)\n",
+    "\n",
+    "    # Create a DataFrame to store the house data\n",
+    "    houses_data = pd.DataFrame({\n",
+    "        'id': range(1, num_houses + 1),\n",
+    "        'surface': surface_areas,\n",
+    "        'u_coeff': heat_transfer_coefficients,\n",
+    "        'indoor_temp_setpoint': inside_temperatures\n",
+    "    })\n",
+    "\n",
+    "    # Generate hourly outside temperature data\n",
+    "    # Assume a sinusoidal pattern with daily variations and some random noise\n",
+    "    hours = np.arange(num_hours)\n",
+    "    daily_variation = 10 * np.sin(2 * np.pi * hours / 24)  # Daily temperature variation\n",
+    "    seasonal_variation = 15 * np.sin(2 * np.pi * hours / (24 * 365))  # Seasonal temperature variation\n",
+    "    random_noise = np.random.normal(0, 2, num_hours)  # Random noise\n",
+    "\n",
+    "    outside_temperature = 10 + daily_variation + seasonal_variation + random_noise\n",
+    "\n",
+    "    # Create a DataFrame to store the temperature data\n",
+    "    temperature_data = pd.DataFrame({\n",
+    "        'hour': hours,\n",
+    "        'outdoor_temp': outside_temperature\n",
+    "    })\n",
+    "\n",
+    "    # Generate temperature load data for each house\n",
+    "\n",
+    "    # Initialize an empty DataFrame to store the temperature load data\n",
+    "\n",
+    "    temperature_load_data = pd.DataFrame()\n",
+    "\n",
+    "    # Loop over each house to generate the temperature load data\n",
+    "\n",
+    "    for i, row in houses_data.iterrows():\n",
+    "\n",
+    "        surface_area = row['surface']\n",
+    "        heat_transfer_coefficient = row['u_coeff']\n",
+    "        inside_temp = row['indoor_temp_setpoint']\n",
+    "\n",
+    "        # Calculate the heat loss for each hour based on the outside temperature\n",
+    "        temperature_load = surface_area * heat_transfer_coefficient * (outside_temperature - inside_temp)\n",
+    "\n",
+    "        # Add the temperature load data to the DataFrame\n",
+    "        temperature_load_data[f'house_{i + 1}'] = temperature_load\n",
+    "\n",
+    "    return houses_data, temperature_data, temperature_load_data\n",
+    "\n",
+    "# Generate data\n",
+    "houses_data, temperature_data, temperature_load_data = generate_house_data()\n",
+    "\n",
+    "# Display the generated data\n",
+    "print(houses_data)\n",
+    "print(temperature_data)\n",
+    "print(temperature_load_data)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,7 +316,135 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from citylearn.data import DataSet\n",
+    "\n",
+    "def generate_hour_load(current_hour, solar_const):\n",
+    "\n",
+    "    adjusted_hour = current_hour % 24\n",
+    "\n",
+    "    if adjusted_hour >= 0 and adjusted_hour <= 10:\n",
+    "        return 0\n",
+    "\n",
+    "    elif adjusted_hour > 10 and adjusted_hour <= 17 or adjusted_hour == 23:\n",
+    "        return (solar_const * 13) / 2 / 8\n",
+    "\n",
+    "    else:\n",
+    "        return (solar_const * 13) / 2 / 5\n",
+    "\n",
+    "def generate_data_from_house_specs(base_dataset: str = 'citylearn_challenge_2022_phase_all', dest_folder: str = 'thermal_data/'):\n",
+    "\n",
+    "    # Make sure the destination folder exists including the subfolders\n",
+    "\n",
+    "    Path(dest_folder).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    # Get reference schema\n",
+    "\n",
+    "    schema = DataSet.get_schema(base_dataset)\n",
+    "\n",
+    "    # Reduce the number of buildings to 1\n",
+    "\n",
+    "    schema['buildings'] = {f'Building_{i}': schema['buildings'][f'Building_{i}'] for i in range(1, 2)}\n",
+    "\n",
+    "    # Extract the base weather, emissions and pricing data (doesn't change among buildings)\n",
+    "\n",
+    "    base_weather = pd.read_csv(os.path.join(schema['root_directory'], schema['buildings']['Building_1']['weather']))\n",
+    "    base_pricing = pd.read_csv(os.path.join(schema['root_directory'], schema['buildings']['Building_1']['pricing']))\n",
+    "    base_emissions = pd.read_csv(os.path.join(schema['root_directory'], schema['buildings']['Building_1']['carbon_intensity']))\n",
+    "\n",
+    "    # Read the base schema and process the json\n",
+    "\n",
+    "    # We need just to store the load and generation\n",
+    "    # 0 - Solar generation\n",
+    "    # 1 - Load\n",
+    "\n",
+    "    building_data = np.array([[[0.] * 2 for _ in range(365 * 24)] for _ in range(1)])\n",
+    "    base_csvs = []\n",
+    "\n",
+    "    for building_no, (building_name, info) in enumerate(schema['buildings'].items()):\n",
+    "\n",
+    "        # Create custom building CSVs\n",
+    "\n",
+    "        base_csv = pd.read_csv(os.path.join(schema['root_directory'], info['energy_simulation']))\n",
+    "\n",
+    "        base_csvs.append(base_csv)\n",
+    "\n",
+    "        constant_solar = 1000 # In kWh\n",
+    "\n",
+    "        for day in range(365):\n",
+    "\n",
+    "            init_step = day * 24\n",
+    "            end_step = day * 24 + 24\n",
+    "\n",
+    "            for hour in range(24):\n",
+    "\n",
+    "                curr_hour = init_step + hour\n",
+    "\n",
+    "                # Generate simpler solar data\n",
+    "\n",
+    "                if hour < 6 or hour > 18:\n",
+    "                    building_data[building_no,curr_hour,0] = 0\n",
+    "                else:\n",
+    "                    building_data[building_no,curr_hour,0] = constant_solar\n",
+    "\n",
+    "                # Generate simple load following the rule\n",
+    "\n",
+    "                building_data[building_no,curr_hour,1] += generate_hour_load(curr_hour, constant_solar)\n",
+    "\n",
+    "    # Update the base csv with the new data\n",
+    "\n",
+    "    building_data = np.array(building_data).clip(min=0)\n",
+    "\n",
+    "    for building_no, (building_name, _) in enumerate(schema['buildings'].items()):\n",
+    "\n",
+    "        base_csvs[building_no]['solar_generation'] = building_data[building_no,:,0]\n",
+    "        base_csvs[building_no]['non_shiftable_load'] = building_data[building_no,:,1] / 1000 # kWh\n",
+    "\n",
+    "        base_csvs[building_no].to_csv(os.path.join(dest_folder, f'{building_name}.csv'), index=False)\n",
+    "\n",
+    "        # Update the schema with the new paths\n",
+    "\n",
+    "        schema['buildings'][building_name]['energy_simulation'] = f'{building_name}.csv'\n",
+    "\n",
+    "        # Update the schema to guarantee no degradation in the battery efficiency\n",
+    "\n",
+    "        schema['buildings'][building_name]['electrical_storage']['attributes'] = {\n",
+    "            \"capacity\": 6.4,\n",
+    "            \"efficiency\": 1,\n",
+    "            \"capacity_loss_coefficient\": 0.0,\n",
+    "            \"loss_coefficient\": 0.0,\n",
+    "            \"nominal_power\": 5.0,\n",
+    "            \"power_efficiency_curve\": [[0, 1],[0.3, 1],[0.7, 1],[0.8, 1],[1, 1]],\n",
+    "            \"capacity_power_curve\": [[0.0, 1],[0.8, 1],[1.0, 1]],\n",
+    "        }\n",
+    "\n",
+    "        # Set nominal power to 1 for solar panel to simplify case\n",
+    "\n",
+    "        schema['buildings'][building_name]['pv']['attributes']['nominal_power'] = 1.0\n",
+    "\n",
+    "    # Write pricing and emissions data to the destination folder\n",
+    "\n",
+    "    base_weather.to_csv(os.path.join(dest_folder, 'weather.csv'), index=False)\n",
+    "    base_pricing.to_csv(os.path.join(dest_folder, 'pricing.csv'), index=False)\n",
+    "    base_emissions.to_csv(os.path.join(dest_folder, 'carbon_intensity.csv'), index=False)\n",
+    "\n",
+    "    # Save the new schema in the destination folder\n",
+    "\n",
+    "    schema['root_directory'] = dest_folder\n",
+    "\n",
+    "    with open(os.path.join(dest_folder, 'schema.json'), 'w') as f:\n",
+    "        json.dump(schema, f, indent=4)\n",
+    "\n",
+    "generate_data_from_house_specs(dest_folder='./data/base_case_2/')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,7 +520,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rl_energy",
    "language": "python",
    "name": "python3"
   },
@@ -280,12 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "aef885a76ce31739e452d1e6967b400907b14827afd25732d0e38ec88d4e0d05"
-   }
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
