Logging and plotting of cost and emissions
Inclusion of the metrics for cost and emissions, it required modifying from the CL environment so it returns the values in the info object, we also tidy up the data generation notebook.

--- a/src/notebooks/data_generation/naive_data_generation.ipynb
+++ b/src/notebooks/data_generation/naive_data_generation.ipynb
@@ -6,22 +6,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import json\n",
+    "import shutil\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
+    "from pathlib import Path\n",
+    "from citylearn.data import DataSet\n",
     "from matplotlib import pyplot as plt\n",
-    "from src.utils.utils import set_seed"
+    "from src.utils.utils import set_seed\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "# Set a fix seed for reproducibility\n",
+    "\n",
+    "set_seed(0)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Set a seed for reproducibility\n",
-    "\n",
-    "set_seed(0)"
+    "# Utils"
    ]
   },
   {
@@ -62,6 +69,62 @@
     "        noise += np.random.normal(0, 0.01, (df.shape[0]))\n",
     "    c.columns = [f'{df.name}_predicted_{abs(s)}h' for s in shifts]\n",
     "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convex_combination_of_df(df1, df2, alpha):\n",
+    "\n",
+    "    comb = df1 * alpha + df2 * (1 - alpha)\n",
+    "    comb = comb.astype(df1.dtypes)\n",
+    "\n",
+    "    return comb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_energy_solution(sol, solar_generation):\n",
+    "    \n",
+    "    _, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "            \n",
+    "    ax1.plot(sol['load'], label='Load', marker='o')\n",
+    "    ax1.plot(sol['batt'], label='Battery energy', color='g', linestyle='--', marker='o')\n",
+    "    ax1.plot(solar_generation, label='Solar generation', marker='o')\n",
+    "    ax1.plot(sol['load'] + sol['batt'] - solar_generation, label='Total energy', color='m', linestyle='--', marker='o')\n",
+    "\n",
+    "    ax2.plot(sol['soc'], label='State of charge', color='tab:red', marker='o')\n",
+    "    ax2.plot(sol['action'], label='Battery action', color='tab:purple', marker='o')\n",
+    "\n",
+    "    ax1.set_xlabel('Time (hours)')\n",
+    "    ax2.set_xlabel('Time (hours)')\n",
+    "    ax1.set_ylabel('Energy (kWh)')\n",
+    "    ax2.set_ylabel('State of Charge')\n",
+    "\n",
+    "    ax1.legend(loc='upper left')\n",
+    "    ax2.legend(loc='upper right')\n",
+    "\n",
+    "    ax1.grid()\n",
+    "    ax2.grid()\n",
+    "\n",
+    "    ax1.set_xticks(range(0, 24))\n",
+    "    ax2.set_xticks(range(0, 24))\n",
+    "\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data generation"
    ]
   },
   {
@@ -130,77 +193,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_energy_solution(sol, solar_generation):\n",
-    "    \n",
-    "    fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(14, 6))\n",
-    "            \n",
-    "    ax1.plot(sol['load'], label='Load', marker='o')\n",
-    "    ax1.plot(sol['batt'], label='Battery energy', color='g', linestyle='--', marker='o')\n",
-    "    ax1.plot(solar_generation, label='Solar generation', marker='o')\n",
-    "    ax1.plot(sol['load'] + sol['batt'] - solar_generation, label='Total energy', color='m', linestyle='--', marker='o')\n",
-    "\n",
-    "    ax2.plot(sol['soc'], label='State of charge', color='tab:red', marker='o')\n",
-    "    ax2.plot(sol['action'], label='Battery action', color='tab:purple', marker='o')\n",
-    "\n",
-    "    ax1.set_xlabel('Time (hours)')\n",
-    "    ax2.set_xlabel('Time (hours)')\n",
-    "    ax1.set_ylabel('Energy (kWh)')\n",
-    "    ax2.set_ylabel('State of Charge')\n",
-    "\n",
-    "    ax1.legend(loc='upper left')\n",
-    "    ax2.legend(loc='upper right')\n",
-    "\n",
-    "    ax1.grid()\n",
-    "    ax2.grid()\n",
-    "\n",
-    "    ax1.set_xticks(range(0, 24))\n",
-    "    ax2.set_xticks(range(0, 24))\n",
-    "\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define solar energy generation values (in kWh) for each hour\n",
-    "\n",
-    "solar_generation = np.array([\n",
-    "    0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-    "    0.        , 0.01450417, 0.11152084, 0.27647083, 0.453025  ,\n",
-    "    0.6069625 , 0.71275   , 0.759825  , 0.7512625 , 0.689675  ,\n",
-    "    0.581275  , 0.422425  , 0.2426    , 0.08224167, 0.00623333,\n",
-    "    0.        , 0.        , 0.        , 0.        \n",
-    "])\n",
-    "\n",
-    "# Define an assignation of energy consumption by levels\n",
-    "\n",
-    "sol = generate_data(solar_profile=solar_generation, batt_cap=1, load_ratio=0.5)\n",
-    "plot_energy_solution(sol, solar_generation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import json\n",
-    "import shutil\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "from pathlib import Path\n",
-    "from citylearn.data import DataSet\n",
-    "\n",
     "def generate_naive_data_from_ref(\n",
     "    base_dataset: str = 'citylearn_challenge_2022_phase_all', dest_folder: str = 'data/', building_no: int = 5, batt_cap: float = 1.0,\n",
-    "    load_ratio: float = 0.6, simplify_solar: bool = False\n",
+    "    load_ratio: float = 0.6, simplify_solar: bool = False, selling_margin: float = 0.1\n",
     "):\n",
     "\n",
     "    # Generate name based on the number of buildings\n",
@@ -264,7 +259,7 @@
     "\n",
     "                base_pricing.loc[day * 24:(day + 1) * 24 - 1, 'selling_pricing'] = base_pricing.loc[\n",
     "                    day * 24:(day + 1) * 24 - 1, 'electricity_pricing'\n",
-    "                ].min()\n",
+    "                ].min() * (1 - selling_margin)\n",
     "\n",
     "                if simplify_solar:\n",
     "\n",
@@ -356,7 +351,114 @@
     "    with open(os.path.join(dest_folder, 'schema.json'), 'w') as f:\n",
     "        json.dump(schema, f, indent=4)\n",
     "\n",
-    "    return dest_folder\n"
+    "    return dest_folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_eval_data_from_ref(ref_dir: str = 'data/naive_data/'):\n",
+    "\n",
+    "    # Get schema file\n",
+    "\n",
+    "    with open(os.path.join(ref_dir, 'schema.json'), 'r') as f:\n",
+    "        schema = json.load(f)\n",
+    "\n",
+    "    # Read the original files in folder\n",
+    "\n",
+    "    building_files = []\n",
+    "\n",
+    "    for csv_file in sorted(Path(ref_dir).glob(\"Building_*.csv\")):\n",
+    "                    \n",
+    "        df = pd.read_csv(csv_file)\n",
+    "        building_files.append(df)\n",
+    "\n",
+    "    sol_files = []\n",
+    "\n",
+    "    for csv_file in sorted(Path(ref_dir).glob(\"sol_*.csv\")):\n",
+    "                    \n",
+    "        df = pd.read_csv(csv_file)\n",
+    "        sol_files.append(df)\n",
+    "\n",
+    "    # Battery characteristics\n",
+    "\n",
+    "    batt_caps = []\n",
+    "\n",
+    "    for building in schema['buildings'].values():\n",
+    "        batt_caps.append(building['electrical_storage']['attributes']['capacity'])\n",
+    "\n",
+    "    combinations = []\n",
+    "\n",
+    "    for i in range(len(schema['buildings'])):\n",
+    "\n",
+    "        # Pick a random alpha\n",
+    "\n",
+    "        alpha = np.random.rand()\n",
+    "\n",
+    "        # Pick two random buildings\n",
+    "\n",
+    "        building_a, building_b = np.random.choice(len(schema['buildings']), 2, replace=False)\n",
+    "\n",
+    "        combinations.append((building_a, building_b))\n",
+    "\n",
+    "        # Convex combination of the solutions\n",
+    "\n",
+    "        sol_1 = sol_files[building_a]\n",
+    "        sol_2 = sol_files[building_b]\n",
+    "\n",
+    "        sol = convex_combination_of_df(sol_1, sol_2, alpha)\n",
+    "\n",
+    "        # Convex combination of the buildings, but excluding the columns that should not be combined\n",
+    "\n",
+    "        building_1 = building_files[building_a]\n",
+    "        building_2 = building_files[building_b]\n",
+    "\n",
+    "        building = convex_combination_of_df(building_1, building_2, alpha)\n",
+    "\n",
+    "        # Save the new files in the eval subfolder, first check that the folder exists\n",
+    "\n",
+    "        Path(os.path.join(ref_dir, 'eval')).mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "        building.to_csv(os.path.join(ref_dir, 'eval', f'Building_{i + 1}.csv'), index=False)\n",
+    "        sol.to_csv(os.path.join(ref_dir, 'eval', f'sol_Building_{i + 1}.csv'), index=False)\n",
+    "\n",
+    "        # Modify the schema to specify battery characteristics\n",
+    "\n",
+    "        schema['buildings'][f'Building_{i + 1}']['electrical_storage']['attributes'] = {\n",
+    "            \"capacity\": np.mean([batt_caps[building_a], batt_caps[building_b]]),\n",
+    "            \"efficiency\": 1.0,\n",
+    "            \"capacity_loss_coefficient\": 0.0,\n",
+    "            \"loss_coefficient\": 0.0,\n",
+    "            \"nominal_power\": np.mean([batt_caps[building_a], batt_caps[building_b]]),\n",
+    "            \"power_efficiency_curve\": [[0, 1],[0.3, 1],[0.7, 1],[0.8, 1],[1, 1]],\n",
+    "            \"capacity_power_curve\": [[0.0, 1],[0.8, 1],[1.0, 1]],\n",
+    "        }\n",
+    "\n",
+    "    # Modify the schema to point to the new files\n",
+    "\n",
+    "    schema['root_directory'] = os.path.join(ref_dir, 'eval')\n",
+    "\n",
+    "    # Save schema\n",
+    "\n",
+    "    with open(os.path.join(ref_dir, 'eval', 'schema.json'), 'w') as f:\n",
+    "        json.dump(schema, f, indent=4)\n",
+    "\n",
+    "    # Save the rest of relevant files\n",
+    "\n",
+    "    for file in ['weather.csv', 'pricing.csv', 'carbon_intensity.csv']:\n",
+    "        shutil.copyfile(os.path.join(ref_dir, file), os.path.join(ref_dir, 'eval', file))\n",
+    "\n",
+    "    return combinations, building_files, sol_files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generate dataset"
    ]
   },
   {
@@ -367,9 +469,23 @@
    "source": [
     "# Define an assignation of energy consumption by levels\n",
     "\n",
+    "n_buildings = 2\n",
+    "batt_cap = 1.0\n",
+    "load_ratio = 0.6\n",
+    "simplify_solar = True\n",
+    "\n",
     "dest_folder = generate_naive_data_from_ref(\n",
-    "    building_no=2, batt_cap=1.0, load_ratio=0.5, simplify_solar=True\n",
-    ")"
+    "    building_no=n_buildings, batt_cap=batt_cap, load_ratio=load_ratio, simplify_solar=simplify_solar\n",
+    ")\n",
+    "\n",
+    "combinations, building_files, sol_files = create_eval_data_from_ref(ref_dir=dest_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Checks on the generated data"
    ]
   },
   {
@@ -380,7 +496,7 @@
    "source": [
     "# Check data generated picking random days from random buildings\n",
     "\n",
-    "day_index = 888#24 * 150\n",
+    "day_index = 4128#888#24 * 150\n",
     "building_index = 1\n",
     "\n",
     "with open(f'{dest_folder}schema.json', 'r') as f:\n",
@@ -511,7 +627,7 @@
     "\n",
     "day_index = 5832\n",
     "\n",
-    "with open('data/naive_data/schema.json', 'r') as f:\n",
+    "with open(f'{dest_folder}schema.json', 'r') as f:\n",
     "    schema = json.load(f)\n",
     "\n",
     "for b_ix in range(len(schema['buildings'])):\n",
@@ -559,126 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validation data from convex combination of houses"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def convex_combination_of_df(df1, df2, alpha):\n",
-    "\n",
-    "    comb = df1 * alpha + df2 * (1 - alpha)\n",
-    "    comb = comb.astype(df1.dtypes)\n",
-    "\n",
-    "    return comb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "\n",
-    "def create_eval_data_from_ref(ref_dir: str = 'data/naive_data/'):\n",
-    "\n",
-    "    # Get schema file\n",
-    "\n",
-    "    with open(os.path.join(ref_dir, 'schema.json'), 'r') as f:\n",
-    "        schema = json.load(f)\n",
-    "\n",
-    "    # Read the original files in folder\n",
-    "\n",
-    "    building_files = []\n",
-    "\n",
-    "    for csv_file in sorted(Path(ref_dir).glob(\"Building_*.csv\")):\n",
-    "                    \n",
-    "        df = pd.read_csv(csv_file)\n",
-    "        building_files.append(df)\n",
-    "\n",
-    "    sol_files = []\n",
-    "\n",
-    "    for csv_file in sorted(Path(ref_dir).glob(\"sol_*.csv\")):\n",
-    "                    \n",
-    "        df = pd.read_csv(csv_file)\n",
-    "        sol_files.append(df)\n",
-    "\n",
-    "    # Battery characteristics\n",
-    "\n",
-    "    batt_caps = []\n",
-    "\n",
-    "    for building in schema['buildings'].values():\n",
-    "        batt_caps.append(building['electrical_storage']['attributes']['capacity'])\n",
-    "\n",
-    "\n",
-    "    combinations = []\n",
-    "\n",
-    "    for i in range(len(schema['buildings'])):\n",
-    "\n",
-    "        # Pick a random alpha\n",
-    "\n",
-    "        alpha = np.random.rand()\n",
-    "\n",
-    "        # Pick two random buildings\n",
-    "\n",
-    "        building_a, building_b = np.random.choice(len(schema['buildings']), 2, replace=False)\n",
-    "\n",
-    "        combinations.append((building_a, building_b))\n",
-    "\n",
-    "        # Convex combination of the solutions\n",
-    "\n",
-    "        sol_1 = sol_files[building_a]\n",
-    "        sol_2 = sol_files[building_b]\n",
-    "\n",
-    "        sol = convex_combination_of_df(sol_1, sol_2, alpha)\n",
-    "\n",
-    "        # Convex combination of the buildings, but excluding the columns that should not be combined\n",
-    "\n",
-    "        building_1 = building_files[building_a]\n",
-    "        building_2 = building_files[building_b]\n",
-    "\n",
-    "        building = convex_combination_of_df(building_1, building_2, alpha)\n",
-    "\n",
-    "        # Save the new files in the eval subfolder, first check that the folder exists\n",
-    "\n",
-    "        Path(os.path.join(ref_dir, 'eval')).mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "        building.to_csv(os.path.join(ref_dir, 'eval', f'Building_{i + 1}.csv'), index=False)\n",
-    "        sol.to_csv(os.path.join(ref_dir, 'eval', f'sol_Building_{i + 1}.csv'), index=False)\n",
-    "\n",
-    "        # Modify the schema to specify battery characteristics\n",
-    "\n",
-    "        schema['buildings'][f'Building_{i + 1}']['electrical_storage']['attributes'] = {\n",
-    "            \"capacity\": np.mean([batt_caps[building_a], batt_caps[building_b]]),\n",
-    "            \"efficiency\": 1.0,\n",
-    "            \"capacity_loss_coefficient\": 0.0,\n",
-    "            \"loss_coefficient\": 0.0,\n",
-    "            \"nominal_power\": np.mean([batt_caps[building_a], batt_caps[building_b]]),\n",
-    "            \"power_efficiency_curve\": [[0, 1],[0.3, 1],[0.7, 1],[0.8, 1],[1, 1]],\n",
-    "            \"capacity_power_curve\": [[0.0, 1],[0.8, 1],[1.0, 1]],\n",
-    "        }\n",
-    "\n",
-    "    # Modify the schema to point to the new files\n",
-    "\n",
-    "    schema['root_directory'] = os.path.join(ref_dir, 'eval')\n",
-    "\n",
-    "    # Save schema\n",
-    "\n",
-    "    with open(os.path.join(ref_dir, 'eval', 'schema.json'), 'w') as f:\n",
-    "        json.dump(schema, f, indent=4)\n",
-    "\n",
-    "    # Save the rest of relevant files\n",
-    "\n",
-    "    for file in ['weather.csv', 'pricing.csv', 'carbon_intensity.csv']:\n",
-    "        shutil.copyfile(os.path.join(ref_dir, file), os.path.join(ref_dir, 'eval', file))\n",
-    "\n",
-    "    return combinations, building_files, sol_files\n",
-    "\n",
-    "combinations, building_files, sol_files = create_eval_data_from_ref(ref_dir=dest_folder)"
+    "## Checkings on Eval data"
    ]
   },
   {
@@ -690,7 +687,7 @@
     "# Compare in a plot the convex combination of the predictions with the prediction of the convex combination for a given day\n",
     "\n",
     "day_index = 5832\n",
-    "building_index = 1\n",
+    "building_index = 0\n",
     "\n",
     "b1, b2 = combinations[building_index]\n",
     "\n",
@@ -699,7 +696,7 @@
     "\n",
     "# Read the combination from csv\n",
     "\n",
-    "comb = pd.read_csv(f'{dest_folder}/Building_{building_index + 1}.csv')\n",
+    "comb = pd.read_csv(f'{dest_folder}eval/Building_{building_index + 1}.csv')\n",
     "\n",
     "plt.plot(pred_1['non_shiftable_load_predicted_4h'][day_index:day_index + 24], label=f'Building {b1} - Load', marker='o')\n",
     "plt.plot(pred_2['non_shiftable_load_predicted_4h'][day_index:day_index + 24], label=f'Building {b2} - Load', marker='o')\n",
@@ -727,7 +724,7 @@
     "\n",
     "# Read the combination from csv\n",
     "\n",
-    "comb = pd.read_csv(f'{dest_folder}/eval/Building_{building_index + 1}.csv')\n",
+    "comb = pd.read_csv(f'{dest_folder}eval/Building_{building_index + 1}.csv')\n",
     "\n",
     "plt.plot(building_1['solar_generation'][day_index:day_index + 24], label=f'Building {b1} - Load', marker='o')\n",
     "plt.plot(building_2['solar_generation'][day_index:day_index + 24], label=f'Building {b2} - Load', marker='o')\n",
